# risklens-ai

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
config/: agent_plans.yaml  demo_profiles.yaml  risk_taxonomy.yaml  sources.yaml
config/prompts/: report_prompt.md  system_prompt.md
examples/ai_technology_strategy/: README.md
examples/financial_services/: README.md
examples/fintech_web3_risk/: README.md
examples/sample_outputs/: ai_technology_strategy_agent.json  financial_services_agent.json  fintech_web3_risk_agent.json
examples/sample_reports/: README.md  ai_technology_strategy_agent_en.md  ai_technology_strategy_agent_zh.md  financial_services_agent_en.md  financial_services_agent_zh.md  fintech_web3_risk_agent_en.md  fintech_web3_risk_agent_zh.md
examples/sample_traces/: README.md  ai_technology_strategy_trace.json  financial_services_gap_trace.json  financial_services_trace.json  fintech_web3_risk_trace.json
examples/scientific_risk_adapter/: README.md
scripts/: run_demo.ps1  run_demo.py  verify_line_endings.py
src/risklens/: __init__.py  config.py  main.py  models.py
src/risklens/agent/: __init__.py  config.py  evaluator.py  memory.py  orchestrator.py  planner.py  state.py  tools.py  verifier.py
src/risklens/dashboard/: app.py  file_matching.py  helpers.py
src/risklens/fetchers/: __init__.py  arxiv_fetcher.py  market_fetcher.py  regulatory_fetcher.py  rss_fetcher.py  usgs_fetcher.py
src/risklens/llm/: mock_provider.py  (+2 more)
tests/: test_agent_v2.py  test_dashboard_app_static.py  test_dashboard_helpers.py  test_deduplicate.py  test_non_mock_collect.py  test_pipeline_run.py  test_polish_pass.py  test_report_generation.py  test_report_safety.py  test_risk_tagging.py  test_source_scoring.py  test_v2_optimization.py  test_version.py
(+15 files in other folders)
