[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risklens-ai"
version = "0.2.0"
description = "Risk-aware market and technology intelligence agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pandas>=2.0",
  "requests>=2.31",
  "feedparser>=6.0",
  "beautifulsoup4>=4.12",
  "markdown>=3.5",
  "jinja2>=3.1",
  "streamlit>=1.32",
  "python-dotenv>=1.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
llm = ["openai>=1.40"]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
strict = false
follow_imports = "skip"
